test/fails/bad_parsing/bad_access3.lgl
void main() {
    print [1., 2.].1;  // Must be an id
}